name:                   vk-api
version:                0.0.0
author:                 eryx67 <eryx67@gmail.com>
maintainer:             eryx67 <eryx67@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               API for VKontakte social network. Could be used in GHC and GHCJS
category:               Web
cabal-version:          >= 1.10
build-type:             Simple

extra-source-files:     README.md
                      , ChangeLog.md
                      , test-data/*.mp3

flag debug
     description: Enable debug
     default: False

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  js-sources: jsbits/xhr.js
  exposed-modules: Network.API.Builder.Queryable
                 , Network.API.Builder.TH
                 , VK.Internal.Orphans
                 , VK.Internal.Utils
                 , VK.API
                 , VK.API.CommonTypes
                 , VK.API.Types
                 , VK.API.Errors
                 , VK.API.Auth
                 , VK.API.Models.Video
                 , VK.API.Models.Audio
                 , VK.API.Models.Users
                 , VK.API.Models.Types
                 , VK.API.Models.Types.User
                 , VK.API.Models.Types.Group
                 , VK.API.Models.Types.Counters
                 , VK.API.Actions.Video
                 , VK.API.Actions.Audio
                 , VK.API.Actions.Users
                 , VK.API.Actions.Types
                 , VK.API.Audio
                 , VK.API.Video
                 , VK.API.Routable
                 , VK.API.Routes

  build-depends:        aeson
                      , aeson-casing
                      , api-builder
                      , base >= 4.8 && < 5
                      , bytestring
                      , data-default-generics
                      , deepseq
                      , http-types
                      , parsec
                      , scientific
                      , split
                      , template-haskell
                      , text
                      , text-format
                      , time
                      , transformers
                      , tagsoup
                      , uri
                      , errors
                      , unordered-containers
  default-extensions: CPP

  if impl(ghcjs)
      build-depends: ghcjs-base
  if !impl(ghcjs)
        build-depends: http-client
                     , http-client-tls
  if flag(debug)
    ghc-options: -DDEBUG

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  other-modules: TestSettings
               , VK.API.AudioSpec
               , VK.API.AuthSpec
  build-depends:        base
                      , hspec
                      , data-default-generics
                      , http-client
                      , http-client-tls
                      , http-types
                      , transformers
                      , text
                      , bytestring
                      , tagsoup
                      , uri
                      , aeson
                      , aeson-casing
                      , unordered-containers
                      , time
                      , api-builder
                      , errors
                      , split
                      , template-haskell
                      , parsec
                      , scientific
                      , vk-api
  default-extensions: CPP

source-repository head
  Type:                 git


--  Location:
